// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ListItem > applies hover and focus states when is clickable > default status 1`] = `
<DocumentFragment>
  <div
    class="style={}
"
  >
    <div>
      <button
        aria-selected="false"
        class="style={
  ':active': {
    backgroundColor: '#DADDFB !important',
    color: '#0D1C77 !important',
  },
  ':focus': {
    border: '1px solid #5363CA',
  },
  ':hover': {
    backgroundColor: '#EDEEF3',
    color: '#52617A',
  },
  alignItems: 'center',
  backgroundColor: 'transparent',
  border: '1px solid transparent',
  borderBottom: '1px solid transparent',
  boxSizing: 'border-box',
  color: '#69768B',
  columnGap: '0.5rem',
  cursor: 'pointer',
  display: 'flex',
  justifyContent: 'space-between',
  minHeight: '44px',
  outline: 'none',
  padding: '0.5rem 1rem',
  width: '100%',
}
"
        data-testid="list-item"
        role="button"
        tabindex="0"
      >
        <div
          class="style={
  alignItems: 'center',
  columnGap: '0.5rem',
  display: 'flex',
  flex: 1,
  overflow: 'hidden',
}
"
        >
          <div
            class="style={ flex: 1, overflow: 'hidden' }
"
          >
            <div
              class="style={
  alignItems: 'center',
  display: 'flex',
  gap: '0.75rem',
}
"
            >
              <span
                class="style={ overflow: 'hidden' }
"
                id="bui1__anchor"
              >
                <p
                  class="style={
  WebkitBoxOrient: 'vertical',
  WebkitLineClamp: 1,
  color: 'inherit',
  display: '-webkit-box',
  fontFamily: '"Albert Sans", sans-serif',
  fontSize: 'max(calc(var(--font-base-size) * var(--font-scale-body)), 12px)',
  fontWeight: '400',
  lineHeight: 1.5,
  margin: 0,
  overflow: 'hidden',
  textAlign: 'start',
  textOverflow: 'ellipsis',
  whiteSpace: 'pre-wrap',
  wordBreak: 'break-all',
}
"
                  data-baseweb="typo-paragraphmedium"
                >
                  Id laboris cupidatat nostrud qui in amet non fugiat.
                </p>
              </span>
            </div>
            <span
              class="style={ overflow: 'hidden' }
"
              id="bui2__anchor"
            >
              <p
                class="style={
  WebkitBoxOrient: 'vertical',
  WebkitLineClamp: 1,
  color: '#B4BAC5',
  display: '-webkit-box',
  fontFamily: '"Albert Sans", sans-serif',
  fontSize: 'max(calc(var(--font-base-size) * var(--font-scale-body-small-mono)), 12px)',
  fontWeight: '400',
  lineHeight: 1.5,
  margin: 0,
  overflow: 'hidden',
  textAlign: 'start',
  textOverflow: 'ellipsis',
  whiteSpace: 'pre-wrap',
  wordBreak: 'break-all',
}
"
                data-baseweb="typo-paragraphsmall"
              >
                Reprehenderit id cupidatat eu aliqua dolor labore aliquip do sint.
              </p>
            </span>
          </div>
        </div>
      </button>
      <button>
        Secondary element
      </button>
    </div>
  </div>
  <div
    class="style={}
"
  />
</DocumentFragment>
`;

exports[`ListItem > applies hover and focus states when is clickable > default status 2`] = `
<DocumentFragment>
  <div
    class="style={}
"
  >
    <div>
      <button
        aria-selected="false"
        class="style={
  ':active': {
    backgroundColor: '#DADDFB !important',
    color: '#0D1C77 !important',
  },
  ':focus': {
    border: '1px solid #5363CA',
  },
  ':hover': {
    backgroundColor: '#EDEEF3',
    color: '#52617A',
  },
  alignItems: 'center',
  backgroundColor: 'transparent',
  border: '1px solid transparent',
  borderBottom: '1px solid transparent',
  boxSizing: 'border-box',
  color: '#69768B',
  columnGap: '0.5rem',
  cursor: 'pointer',
  display: 'flex',
  justifyContent: 'space-between',
  minHeight: '44px',
  outline: 'none',
  padding: '0.5rem 1rem',
  width: '100%',
}
"
        data-testid="list-item"
        role="button"
        tabindex="0"
      >
        <div
          class="style={
  alignItems: 'center',
  columnGap: '0.5rem',
  display: 'flex',
  flex: 1,
  overflow: 'hidden',
}
"
        >
          <div
            class="style={ flex: 1, overflow: 'hidden' }
"
          >
            <div
              class="style={
  alignItems: 'center',
  display: 'flex',
  gap: '0.75rem',
}
"
            >
              <span
                class="style={ overflow: 'hidden' }
"
                id="bui1__anchor"
              >
                <p
                  class="style={
  WebkitBoxOrient: 'vertical',
  WebkitLineClamp: 1,
  color: 'inherit',
  display: '-webkit-box',
  fontFamily: '"Albert Sans", sans-serif',
  fontSize: 'max(calc(var(--font-base-size) * var(--font-scale-body)), 12px)',
  fontWeight: '400',
  lineHeight: 1.5,
  margin: 0,
  overflow: 'hidden',
  textAlign: 'start',
  textOverflow: 'ellipsis',
  whiteSpace: 'pre-wrap',
  wordBreak: 'break-all',
}
"
                  data-baseweb="typo-paragraphmedium"
                >
                  Id laboris cupidatat nostrud qui in amet non fugiat.
                </p>
              </span>
            </div>
            <span
              class="style={ overflow: 'hidden' }
"
              id="bui2__anchor"
            >
              <p
                class="style={
  WebkitBoxOrient: 'vertical',
  WebkitLineClamp: 1,
  color: '#B4BAC5',
  display: '-webkit-box',
  fontFamily: '"Albert Sans", sans-serif',
  fontSize: 'max(calc(var(--font-base-size) * var(--font-scale-body-small-mono)), 12px)',
  fontWeight: '400',
  lineHeight: 1.5,
  margin: 0,
  overflow: 'hidden',
  textAlign: 'start',
  textOverflow: 'ellipsis',
  whiteSpace: 'pre-wrap',
  wordBreak: 'break-all',
}
"
                data-baseweb="typo-paragraphsmall"
              >
                Reprehenderit id cupidatat eu aliqua dolor labore aliquip do sint.
              </p>
            </span>
          </div>
        </div>
      </button>
      <button>
        Secondary element
      </button>
    </div>
  </div>
  <div
    class="style={}
"
  />
</DocumentFragment>
`;

exports[`ListItem > applies hover and focus states when is clickable > default status 3`] = `
<DocumentFragment>
  <div
    class="style={}
"
  >
    <div>
      <button
        aria-selected="false"
        class="style={
  ':active': {
    backgroundColor: '#DADDFB !important',
    color: '#0D1C77 !important',
  },
  ':focus': {
    border: '1px solid #5363CA',
  },
  ':hover': {
    backgroundColor: '#EDEEF3',
    color: '#52617A',
  },
  alignItems: 'center',
  backgroundColor: 'transparent',
  border: '1px solid transparent',
  borderBottom: '1px solid transparent',
  boxSizing: 'border-box',
  color: '#69768B',
  columnGap: '0.5rem',
  cursor: 'pointer',
  display: 'flex',
  justifyContent: 'space-between',
  minHeight: '44px',
  outline: 'none',
  padding: '0.5rem 1rem',
  width: '100%',
}
"
        data-testid="list-item"
        role="button"
        tabindex="0"
      >
        <div
          class="style={
  alignItems: 'center',
  columnGap: '0.5rem',
  display: 'flex',
  flex: 1,
  overflow: 'hidden',
}
"
        >
          <div
            class="style={ flex: 1, overflow: 'hidden' }
"
          >
            <div
              class="style={
  alignItems: 'center',
  display: 'flex',
  gap: '0.75rem',
}
"
            >
              <span
                class="style={ overflow: 'hidden' }
"
                id="bui1__anchor"
              >
                <p
                  class="style={
  WebkitBoxOrient: 'vertical',
  WebkitLineClamp: 1,
  color: 'inherit',
  display: '-webkit-box',
  fontFamily: '"Albert Sans", sans-serif',
  fontSize: 'max(calc(var(--font-base-size) * var(--font-scale-body)), 12px)',
  fontWeight: '400',
  lineHeight: 1.5,
  margin: 0,
  overflow: 'hidden',
  textAlign: 'start',
  textOverflow: 'ellipsis',
  whiteSpace: 'pre-wrap',
  wordBreak: 'break-all',
}
"
                  data-baseweb="typo-paragraphmedium"
                >
                  Id laboris cupidatat nostrud qui in amet non fugiat.
                </p>
              </span>
            </div>
            <span
              class="style={ overflow: 'hidden' }
"
              id="bui2__anchor"
            >
              <p
                class="style={
  WebkitBoxOrient: 'vertical',
  WebkitLineClamp: 1,
  color: '#69768B',
  display: '-webkit-box',
  fontFamily: '"Albert Sans", sans-serif',
  fontSize: 'max(calc(var(--font-base-size) * var(--font-scale-body-small-mono)), 12px)',
  fontWeight: '400',
  lineHeight: 1.5,
  margin: 0,
  overflow: 'hidden',
  textAlign: 'start',
  textOverflow: 'ellipsis',
  whiteSpace: 'pre-wrap',
  wordBreak: 'break-all',
}
"
                data-baseweb="typo-paragraphsmall"
              >
                Reprehenderit id cupidatat eu aliqua dolor labore aliquip do sint.
              </p>
            </span>
          </div>
        </div>
      </button>
      <button>
        Secondary element
      </button>
    </div>
  </div>
  <div
    class="style={}
"
  />
</DocumentFragment>
`;

exports[`ListItem > applies hover and focus states when is clickable > focus status 1`] = `
<DocumentFragment>
  <div
    class="style={}
"
  >
    <div>
      <button
        aria-selected="false"
        class="style={
  ':active': {
    backgroundColor: '#DADDFB !important',
    color: '#0D1C77 !important',
  },
  ':focus': {
    border: '1px solid #5363CA',
  },
  ':hover': {
    backgroundColor: '#EDEEF3',
    color: '#52617A',
  },
  alignItems: 'center',
  backgroundColor: 'transparent',
  border: '1px solid transparent',
  borderBottom: '1px solid transparent',
  boxSizing: 'border-box',
  color: '#69768B',
  columnGap: '0.5rem',
  cursor: 'pointer',
  display: 'flex',
  justifyContent: 'space-between',
  minHeight: '44px',
  outline: 'none',
  padding: '0.5rem 1rem',
  width: '100%',
}
"
        data-testid="list-item"
        role="button"
        tabindex="0"
      >
        <div
          class="style={
  alignItems: 'center',
  columnGap: '0.5rem',
  display: 'flex',
  flex: 1,
  overflow: 'hidden',
}
"
        >
          <div
            class="style={ flex: 1, overflow: 'hidden' }
"
          >
            <div
              class="style={
  alignItems: 'center',
  display: 'flex',
  gap: '0.75rem',
}
"
            >
              <span
                class="style={ overflow: 'hidden' }
"
                id="bui1__anchor"
              >
                <p
                  class="style={
  WebkitBoxOrient: 'vertical',
  WebkitLineClamp: 1,
  color: 'inherit',
  display: '-webkit-box',
  fontFamily: '"Albert Sans", sans-serif',
  fontSize: 'max(calc(var(--font-base-size) * var(--font-scale-body)), 12px)',
  fontWeight: '400',
  lineHeight: 1.5,
  margin: 0,
  overflow: 'hidden',
  textAlign: 'start',
  textOverflow: 'ellipsis',
  whiteSpace: 'pre-wrap',
  wordBreak: 'break-all',
}
"
                  data-baseweb="typo-paragraphmedium"
                >
                  Id laboris cupidatat nostrud qui in amet non fugiat.
                </p>
              </span>
            </div>
            <span
              class="style={ overflow: 'hidden' }
"
              id="bui2__anchor"
            >
              <p
                class="style={
  WebkitBoxOrient: 'vertical',
  WebkitLineClamp: 1,
  color: '#69768B',
  display: '-webkit-box',
  fontFamily: '"Albert Sans", sans-serif',
  fontSize: 'max(calc(var(--font-base-size) * var(--font-scale-body-small-mono)), 12px)',
  fontWeight: '400',
  lineHeight: 1.5,
  margin: 0,
  overflow: 'hidden',
  textAlign: 'start',
  textOverflow: 'ellipsis',
  whiteSpace: 'pre-wrap',
  wordBreak: 'break-all',
}
"
                data-baseweb="typo-paragraphsmall"
              >
                Reprehenderit id cupidatat eu aliqua dolor labore aliquip do sint.
              </p>
            </span>
          </div>
        </div>
      </button>
      <button>
        Secondary element
      </button>
    </div>
  </div>
  <div
    class="style={}
"
  />
</DocumentFragment>
`;

exports[`ListItem > applies hover and focus states when is clickable > hover status 1`] = `
<DocumentFragment>
  <div
    class="style={}
"
  >
    <div>
      <button
        aria-selected="false"
        class="style={
  ':active': {
    backgroundColor: '#DADDFB !important',
    color: '#0D1C77 !important',
  },
  ':focus': {
    border: '1px solid #5363CA',
  },
  ':hover': {
    backgroundColor: '#EDEEF3',
    color: '#52617A',
  },
  alignItems: 'center',
  backgroundColor: 'transparent',
  border: '1px solid transparent',
  borderBottom: '1px solid transparent',
  boxSizing: 'border-box',
  color: '#69768B',
  columnGap: '0.5rem',
  cursor: 'pointer',
  display: 'flex',
  justifyContent: 'space-between',
  minHeight: '44px',
  outline: 'none',
  padding: '0.5rem 1rem',
  width: '100%',
}
"
        data-testid="list-item"
        role="button"
        tabindex="0"
      >
        <div
          class="style={
  alignItems: 'center',
  columnGap: '0.5rem',
  display: 'flex',
  flex: 1,
  overflow: 'hidden',
}
"
        >
          <div
            class="style={ flex: 1, overflow: 'hidden' }
"
          >
            <div
              class="style={
  alignItems: 'center',
  display: 'flex',
  gap: '0.75rem',
}
"
            >
              <span
                class="style={ overflow: 'hidden' }
"
                id="bui1__anchor"
              >
                <p
                  class="style={
  WebkitBoxOrient: 'vertical',
  WebkitLineClamp: 1,
  color: 'inherit',
  display: '-webkit-box',
  fontFamily: '"Albert Sans", sans-serif',
  fontSize: 'max(calc(var(--font-base-size) * var(--font-scale-body)), 12px)',
  fontWeight: '400',
  lineHeight: 1.5,
  margin: 0,
  overflow: 'hidden',
  textAlign: 'start',
  textOverflow: 'ellipsis',
  whiteSpace: 'pre-wrap',
  wordBreak: 'break-all',
}
"
                  data-baseweb="typo-paragraphmedium"
                >
                  Id laboris cupidatat nostrud qui in amet non fugiat.
                </p>
              </span>
            </div>
            <span
              class="style={ overflow: 'hidden' }
"
              id="bui2__anchor"
            >
              <p
                class="style={
  WebkitBoxOrient: 'vertical',
  WebkitLineClamp: 1,
  color: '#69768B',
  display: '-webkit-box',
  fontFamily: '"Albert Sans", sans-serif',
  fontSize: 'max(calc(var(--font-base-size) * var(--font-scale-body-small-mono)), 12px)',
  fontWeight: '400',
  lineHeight: 1.5,
  margin: 0,
  overflow: 'hidden',
  textAlign: 'start',
  textOverflow: 'ellipsis',
  whiteSpace: 'pre-wrap',
  wordBreak: 'break-all',
}
"
                data-baseweb="typo-paragraphsmall"
              >
                Reprehenderit id cupidatat eu aliqua dolor labore aliquip do sint.
              </p>
            </span>
          </div>
        </div>
      </button>
      <button>
        Secondary element
      </button>
    </div>
  </div>
  <div
    class="style={}
"
  />
</DocumentFragment>
`;
